Fixed horizontal scroll in mobile view

--- a/styles/sass/partials/_generic.scss
+++ b/styles/sass/partials/_generic.scss
@@ -2,6 +2,10 @@
 
 /*GENERIC STYLING*/
 
+html, body {
+    overflow-x: hidden;
+}
+
 html {
     font-size: 62.5%;
 }
